force-app/main/default/objects/Channel_Level_Revenue_Information__c/Channel_Level_Revenue_Information__c.object-meta.xml
<CustomObject>
    <label>Channel Level Revenue Information</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Channel Level Revenue Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Level Revenue Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>