force-app/main/default/objects/Channel_Level_Revenue_Information__c/fields/Channel_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program_Level__c</fullName>
    <label>Channel Program Level</label>
    <referenceTo>ChannelProgramLevel</referenceTo>
    <relationshipLabel>Channel Level Revenue Information</relationshipLabel>
    <relationshipName>Channel_Level_Revenue_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>