force-app/main/default/objects/Channel_Level_Revenue_Information__c/fields/LevelRevenueKey__c.field-meta.xml
<CustomField>
    <fullName>LevelRevenueKey__c</fullName>
    <description>Key to identify record uniquely.</description>
    <formula>UPPER(Channel_Program_Level__r.Name) + UPPER(TEXT(Industry__c)) + UPPER(TEXT(Solution__c ))</formula>
    <label>LevelRevenueKey</label>
    <type>Text</type>
</CustomField>