force-app/main/default/objects/Channel_Level_Revenue_Information__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counterpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>