force-app/main/default/objects/Channel_Level_Revenue_Information__c/fields/Threshold_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Revenue__c</fullName>
    <label>Threshold Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>